--- a/public/index.html
+++ b/public/index.html
@@ -19,15 +19,15 @@
 
     <!-- Social Media Previews -->
     <!-- Primary Meta Tags -->
-    <title>Andy Luo, Full Stack Developer</title>
-    <meta name="title" content="Andy Luo, Full Stack Developer">
-    <meta name="description" content="Full Stack Developer and Freelance Photographer based in Toronto, passionate about building web applications, learning new technologies, traveling and exploring new places.">
+    <title>Bhaskar Kulkarni, Full Stack Developer</title>
+    <meta name="title" content="Bhaskar Kulkarni, Full Stack Developer">
+    <meta name="description" content="Full Stack Developer, passionate about building web applications, learning new technologies, traveling and exploring new places.">
 
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://andy8647.com/">
-    <meta property="og:title" content="Andy Luo, Full Stack Developer">
-    <meta property="og:description" content="Full Stack Developer and Freelance Photographer based in Toronto, passionate about building web applications, learning new technologies, traveling and exploring new places.">
+    <meta property="og:title" content="Bhaskar Kulkarni, Full Stack Developer">
+    <meta property="og:description" content="Full Stack Developer, passionate about building web applications, learning new technologies, traveling and exploring new places.">
     <meta property="og:image" content="https://andy8647.com/website.jpg">
 
     <!-- Twitter -->
